--- a/final_proj.html
+++ b/final_proj.html
@@ -256,7 +256,6 @@ if (window.hljs) {
 
 
 
-
 <style type="text/css">
 .main-container {
   max-width: 940px;
@@ -277,9 +276,6 @@ button.code-folding-btn:focus {
 }
 summary {
   display: list-item;
-}
-details > summary > p:only-child {
-  display: inline;
 }
 pre code {
   padding: 0;
@@ -376,7 +372,7 @@ Dieren</h4>
 <p>Final deadline : 22/12 to send</p>
 <ol>
 <li>
-Which extend do we have to explain the theory? (pca itself and 4 methods
+Which extend do we have to explain the theory? (PCA itself and 4 methods
 for CV)
 </li>
 <li>
@@ -394,6 +390,15 @@ Implement Use matrix completion, a.k.a. PCA with missing data
 </li>
 <li>
 Comparison between those 4 methods on Gaussian data
+</li>
+<li>
+Rule-of-thumb methods : percentage of variance explained
+</li>
+<li>
+Non-automated methods : scree-plot (the elbow plot)
+</li>
+<li>
+Lallallero
 </li>
 <li>
 Real world data?
