--- a/final_proj.html
+++ b/final_proj.html
@@ -205,20 +205,20 @@ Real world data? - Gaussian with (Gaussian) noise
 <p><strong>Work for 2.12-4.12:</strong></p>
 <p><span style="color:brown">Emanuele</span> <span style="color:orange">Noah</span> <span style="color:gray">Eliott</span></p>
 <ul>
-<li><p>Find a multivariate Gaussian Data set</p></li>
+<li><p>Find a multivariate Gaussian Data set <span style="color:brown">Emanuele</span></p></li>
 <li><p>Check Method0 - WrongPCA again <span style="color:orange">Noah</span></p></li>
 <li><p>Check Method1 - WrongPCAImproved again <span style="color:orange">Noah</span></p></li>
-<li><p>Check Method2 - MissingData again</p></li>
+<li><p>Check Method2 - MissingData again <span style="color:gray">Eliott</span></p></li>
 <li><p>Check Method3 - KDEApproach again <span style="color:orange">Noah</span></p></li>
 <li><p>Check Method4 - MatrixCompletion <span style="color:orange">Noah</span></p></li>
-<li><p>Run simulation study on synthesized data (- Emphasize on noise, correlation, hyperparameter r, comparing with elbow plots, use the same generated data for the different methods) - document along the way</p></li>
-<li><p>Rerun simulation study on real data set - document along the way</p></li>
+<li><p>Run simulation study on synthesized data (- Emphasize on noise, correlation, hyperparameter r, comparing with elbow plots, use the same generated data for the different methods) - document along the way <span style="color:orange">Noah</span>, <span style="color:gray">Eliott</span></p></li>
+<li><p>Rerun simulation study on real data set - document along the way <span style="color:orange">Noah</span>, <span style="color:gray">Eliott</span></p></li>
 <li><p>Report:</p>
 <ul>
-<li>For <strong>each</strong> method explanation, pseudo-code, simulation &amp; documentation, conclusion</li>
-<li>Extend <a href="#simulation-dataset-description">1.3 Simulation dataset description</a> <span style="color:orange">Noah</span></li>
-<li>Add a section 1.4 for the real data set and what we want to examine</li>
-<li>I think adding a paragraph add the and combining all the methods for the real data set would be the cleanest way</li>
+<li>For <strong>each</strong> method explanation, pseudo-code, simulation &amp; documentation, conclusion <span style="color:orange">Noah</span>, <span style="color:gray">Eliott</span></li>
+<li>Extend <a href="#simulation-dataset-description">1.3 Simulation dataset description</a> <span style="color:brown">Emanuele</span></li>
+<li>Add a section 1.4 for the real data set and what we want to examine <span style="color:brown">Emanuele</span></li>
+<li>I think adding a paragraph add the and combining all the methods for the real data set at the would be the cleanest way and a nice tranisition for the overall conclusion afterwards</li>
 <li>Overall conclusion</li>
 <li>Consider and incorporate “General Feedback for Small Projects” - Manual 11 (Copied to our github)</li>
 <li>Read through other parts and note down suggestions and <strong>any</strong> uncertainties</li>
@@ -267,8 +267,8 @@ v_2 &amp;= \underset{v, \| v \|=1, v^\top v_1 = 0}{\mathrm{arg\,max}} v^\top \wi
 </div>
 <div id="missing-data-approach" class="section level3">
 <h3>2.2 Missing data approach</h3>
-<pre><code>## [1] 245.84183  13.72417 133.23240</code></pre>
-<pre><code>## [1] 45.55211 51.44827 57.82035</code></pre>
+<pre><code>## [1]  10.6099  59.9641 125.1335</code></pre>
+<pre><code>## [1] 14.60620 64.32933 55.60662</code></pre>
 </div>
 </div>
 <div id="kde-modified-approach" class="section level2">
