--- a/final_proj.html
+++ b/final_proj.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Emanuele Sorgente - Noah Scheider - Eliott Van Dieren" />
 
-<meta name="date" content="2022-12-02" />
+<meta name="date" content="2022-12-03" />
 
 <title>Final Project</title>
 
@@ -171,7 +171,7 @@ pre code {
 
 <h1 class="title toc-ignore">Final Project</h1>
 <h4 class="author">Emanuele Sorgente - Noah Scheider - Eliott Van Dieren</h4>
-<h4 class="date">2022-12-02</h4>
+<h4 class="date">2022-12-03</h4>
 
 </div>
 
@@ -206,8 +206,8 @@ Real world data? - Gaussian with (Gaussian) noise
 <p><span style="color:brown">Emanuele</span> <span style="color:orange">Noah</span> <span style="color:gray">Eliott</span></p>
 <ul>
 <li><p>Find a multivariate Gaussian Data set <span style="color:brown">Emanuele</span></p></li>
-<li><p>Check Method0 - WrongPCA again <span style="color:orange">Noah</span></p></li>
-<li><p>Check Method1 - WrongPCAImproved again <span style="color:orange">Noah</span></p></li>
+<li><p><del>Check Method0 - WrongPCA again <span style="color:orange">Noah</span></del> still some questions left (Error is ridiculous)</p></li>
+<li><p><del>Check Method1 - WrongPCAImproved again <span style="color:orange">Noah</span></del> still some questions left (Error is ridiculous)</p></li>
 <li><p>Check Method2 - MissingData again <span style="color:gray">Eliott</span></p></li>
 <li><p>Check Method3 - KDEApproach again <span style="color:brown">Emanuele</span></p></li>
 <li><p>Check Method4 - MatrixCompletion <span style="color:gray">Eliott</span></p></li>
@@ -267,8 +267,8 @@ v_2 &amp;= \underset{v, \| v \|=1, v^\top v_1 = 0}{\mathrm{arg\,max}} v^\top \wi
 </div>
 <div id="missing-data-approach" class="section level3">
 <h3>2.2 Missing data approach</h3>
-<pre><code>## [1] 1.756307 3.556007 5.637232</code></pre>
-<pre><code>## [1] 16.39158 20.89900 75.18242</code></pre>
+<pre><code>## [1] 163.84069  13.38269  51.03709</code></pre>
+<pre><code>## [1] 226.51621  96.64128  25.51133</code></pre>
 </div>
 </div>
 <div id="kde-modified-approach" class="section level2">
