--- a/final_proj.html
+++ b/final_proj.html
@@ -425,6 +425,16 @@ Manual 11 (Copied to our github)</li>
 <strong>any</strong> uncertainties</li>
 <li>Ask Masàk next week about those</li>
 </ul></li>
+<li><p>Questions:</p>
+<ul>
+<li>Missing Data: Singularity issues in l_comp?</li>
+<li>Missing Data: Q or l_comp for convergence</li>
+<li>Missing Data: C is sigma from previous loop?</li>
+<li>Missing Data: mu_l or mu_l-1?</li>
+<li>KDE-Approach: Correct?</li>
+<li>MatrixCompletion: Tolerance and CV</li>
+<li>MatrixCompletion: To what extent does noise influnence -_-</li>
+</ul></li>
 </ul>
 </div>
 <div id="introduction" class="section level2">
