Data set description

--- a/StashedStuff.html
+++ b/StashedStuff.html
@@ -349,11 +349,11 @@ display: none;
 <p>After the end of [2. Cross-validation on PCA methods] we will be equipped with multiple approaches which enables us to recover the best amount of dimensions needed to represent data “accurately” of a data set. Intuitively, every method must have its different advantages and draw backs.
 In order to get a better feeling on how our Cross-Validation methods behave in different circumstances, we will run a simulation study on a variety of synthesized data sets and try to cover a good variety of covariance matrices. This enables us to discover the limits of the different methods used and allow us to conclude and recommend different Algorithms with respect to its underlying data.
 As by construction of our Alogrithms and every single one of them besides the [2.1 Naïve Approach], the [2.5 Matrix completion method] they are only applicable to Multivariate Gaussian distributed data. Therefore we restrict ourselves to this special distribution and create corresponding data in order to get meaningful results. All in all we consider <span class="math inline">\(12\)</span> different data sets and compare the outcome of our <span class="math inline">\(5\)</span> Algorithms on every single one of them. Furthermore, we only consider centered Gaussian Multivariate Random variables with mean <span class="math inline">\(0\)</span>. We create three base data sets, on which we infer <span class="math inline">\(4\)</span> kinds of different noises. In order to compare those we start with a standard Gaussian data set. The second and third base data sets will rely on a random and structured covariance matrix. We denote our base data sets as <span class="math inline">\(D^{i}_0, D^{i}_1\)</span> and <span class="math inline">\(D^{i}_2\)</span> and <span class="math inline">\(i \in \{1,\dots,4\}\)</span>. It consists of data <span class="math inline">\(X=\{X^1,\dots,X^n\}\)</span> and noise <span class="math inline">\(\sigma\)</span>.</p>
-<p>[
+<p>$$
 D^{i}_0 = X + ^{i}<em>p, X^j(0, </em>{pp}), j = 1,,n\</p>
 <p>D^{i}_1 = X + ^{i}_p, X^j(0, <em>1), j = 1,,n <em>1=MM^{T}, (M</em>{ij})</em>{1i,jp} (0,1)\</p>
 <p>D^{i}_2 = X + ^{i}_p, X^j(0, <em>2), j = 1,,n <em>2=MM^{T}, (M</em>{ij})</em>{1i,jp}=
-]</p>
+$$</p>
 <p>For the covariance <span class="math inline">\(\Sigma_2\)</span> of <span class="math inline">\(D^{i}_2\)</span> we will get a structured the matrix that will emphasize the meaningful position of the last variables. To make this more clear, we will give an example for <span class="math inline">\(p=3\)</span>:</p>
 <p><span class="math display">\[
 M =
@@ -371,9 +371,9 @@ M =
 \]</span></p>
 <p>We infer either uniform noise, differing noise or noise that will increase for each variable</p>
 <p><span class="math display">\[
-\epsilon^{1}_p\stackrel{\text{iid}}{\sim}\mathcal{N}(0,\sigma^2\mathbb{1}_{p\times p}), \sigma^2=1.5\\
-\epsilon^{2}_p\stackrel{\text{iid}}{\sim}\mathcal{N}(0,\sigma^2\mathbb{1}_{p\times p}), \sigma^2=0.2\\
-\epsilon^{3}_p\stackrel{\text{iid}}{\sim}\mathcal{N}(0, U), U_{ii}\sim \mathcal{U}([0,2]) \text{ and } U_{ij}=0, \text{for } i\neq j\\
+\epsilon^{1}_p\stackrel{\text{iid}}{\sim}\mathcal{N}(0,\sigma^2\mathbb{1}_{p\times p}), \sigma^2=1.5 \\
+\epsilon^{2}_p\stackrel{\text{iid}}{\sim}\mathcal{N}(0,\sigma^2\mathbb{1}_{p\times p}), \sigma^2=0.2 \\
+\epsilon^{3}_p\stackrel{\text{iid}}{\sim}\mathcal{N}(0, U), U_{ii}\stackrel{\text{iid}}{\sim} \mathcal{U}([0,2]) \text{ and } U_{ij}=0, \text{for } i\neq j \\
 \epsilon^{4}_p\stackrel{\text{iid}}{\sim}\mathcal{N}(0, U), U_{ii}= \frac{2i}{p}\text{ and } U_{ij}=0, \text{for } i\neq j
 \]</span></p>
 </div>
