--- a/final_proj.html
+++ b/final_proj.html
@@ -800,9 +800,9 @@ by estimating the covariance of <span class="math inline">\(X^{(-j)}\)</span>, <
 <li>Choose <span class="math inline">\(R\)</span> according to the
 minimal error</li>
 </ul>
-<p>In the for-loop we realize that it actually resembles a Leave-One-Out
-Cross-validation. In this Method we are trading off high computational
-cost against a stable solution.</p>
+<p>Stepping into the for-loop we realize that it actually resembles a
+Leave-One-Out Cross-validation. In this Method we are trading off high
+computational cost against a stable solution.</p>
 </div>
 <div id="matrix-completion-method" class="section level3">
 <h3>2.5 Matrix completion method</h3>
